--- a/ivb-3-14/Panasenko.A.V/labra_8/labra_8/labra_8.vcxproj.filters
+++ b/ivb-3-14/Panasenko.A.V/labra_8/labra_8/labra_8.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="..\..\..\Хлебников.А.А\Лабораторная работа №8\Matrix\Matrix\main.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\Хлебников.А.А\Лабораторная работа №8\Matrix\Matrix\matrix.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
